kubernetes/apps/openshift-console/openshift-console/manifests/deployment.yaml
---
{
  apiVersion: "apps/v1",
  kind: "Deployment",
  metadata: {
    name: "openshift-console",
    labels: {
      app: "openshift-console",
    },
  },
  spec: {
    replicas: 1,
    selector: {
      matchLabels: {
        app: "openshift-console",
      },
    },
    template: {
      metadata: {
        annotations: {
          security.darkfellanetwork.com/mount-internal-ca: "true",
        },
        labels: {
          app: "openshift-console",
        },
      },
      spec: {
        serviceAccountName: "openshift-console",
        initContainers: [{
          name: "generate-cookie-keys",
          image: "busybox:1.38@sha256:fd8d9aa63ba2f0982b5304e1ee8d3b90a210bc1ffb5314d980eb6962f1a9715d",
          command: [
            "sh",
            "-c",
          ],
          args: [
            "dd if=/dev/urandom of=/etc/console-cookie/auth bs=1 count=32 && dd if=/dev/urandom of=/etc/console-cookie/encrypt bs=1 count=32",
          ],
          volumeMounts: [{
            name: "console-cookie",
            mountPath: "/etc/console-cookie",
          }],
          securityContext: {
            allowPrivilegeEscalation: false,
            readOnlyRootFilesystem: true,
            runAsNonRoot: true,
            runAsUser: 1000,
          },
        }],
        containers: [{
          name: "console",
          image: "ghcr.io/d4rkfella/console:dev@sha256:d60e884156d9a54ce73df9d45fb9106a416fcd040c46db89a743825128d58114",
          ports: [{
            name: "http",
            containerPort: 9000,
            protocol: "TCP",
          }],
          command: [
            "/opt/bridge/bin/bridge",
          ],
          args: [
            "-cookie-authentication-key-file=/etc/console-cookie/auth",
            "-cookie-encryption-key-file=/etc/console-cookie/encrypt",
          ],
          env: [{
            name: "BRIDGE_TECH_PREVIEW",
            value: "true",
          }, {
            name: "BRIDGE_USER_AUTH",
            value: "oidc",
          }, {
            name: "BRIDGE_USER_AUTH_OIDC_ISSUER_URL",
            value: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET",
          }, {
            name: "BRIDGE_USER_AUTH_OIDC_CLIENT_ID",
            value: "openshift-console",
          }, {
            name: "BRIDGE_USER_AUTH_OIDC_CLIENT_SECRET",
            valueFrom: {
              secretKeyRef: {
                name: "openshift-console-secret",
                key: "clientSecret",
              },
            },
          }, {
            name: "BRIDGE_BASE_ADDRESS",
            value: "https://console.darkfellanetwork.com",
          }, {
            name: "BRIDGE_PLUGIN_PROXY",
            value: "{\"services\":[{\"consoleAPIPath\":\"/api/proxy/plugin/kubevirt-plugin/kubevirt-apiserver-proxy/\",\"endpoint\":\"http://kubevirt-apiserver-proxy.kubevirt-hyperconverged.svc:8080\",\"authorize\":true}]}",
          }, {
            name: "BRIDGE_PLUGINS",
            value: "kubevirt-plugin=https://kubevirt-plugin.kubevirt-hyperconverged.svc.cluster.local:9443/, monitoring-plugin=http://openshift-monitoring-plugin.observability.svc.cluster.local:9443",
          }, {
            name: "BRIDGE_PLUGIN_PROXY_SKIP_VERIFY_TLS",
            value: "true",
          }, {
            name: "BRIDGE_I18N_NAMESPACES",
            value: "plugin__kubevirt-plugin, plugin__monitoring-plugin",
          }, {
            name: "BRIDGE_PUBLIC_DIR",
            value: "/opt/bridge/static",
          }, {
            name: "BRIDGE_USER_SETTINGS_LOCATION",
            value: "localstorage",
          }, {
            name: "BRIDGE_SERVICE_CA_FILE",
            value: "/etc/ssl/certs/internal-ca.crt",
          }, {
            name: "BRIDGE_THANOS_HOST",
            value: "kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090",
          }, {
            name: "BRIDGE_THANOS_TENANCY_HOST",
            value: "kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090",
          }, {
            name: "BRIDGE_THANOS_TENANCY_RULES_HOST",
            value: "kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090",
          }, {
            name: "BRIDGE_ALERTMANAGER_HOST",
            value: "kube-prometheus-stack-alertmanager.observability.svc.cluster.local:9093",
          }, {
            name: "BRIDGE_ALERTMANAGER_TENANCY_HOST",
            value: "kube-prometheus-stack-alertmanager.observability.svc.cluster.local:9093",
          }, {
            name: "BRIDGE_ALERTMANAGER_USER_WORKLOAD_HOST",
            value: "kube-prometheus-stack-alertmanager.observability.svc.cluster.local:9093",
          }],
          resources: {
            requests: {
              cpu: "100m",
              memory: "256Mi",
            },
            limits: {
              cpu: "500m",
              memory: "512Mi",
            },
          },
          securityContext: {
            allowPrivilegeEscalation: false,
            readOnlyRootFilesystem: false,
            runAsNonRoot: true,
            runAsUser: 1000,
            capabilities: {
              drop: [
                "ALL",
              ],
            },
          },
          volumeMounts: [{
            name: "console-cookie",
            mountPath: "/etc/console-cookie",
            readOnly: true,
          }, {
            name: "oidc-secret",
            mountPath: "/etc/oidc",
            readOnly: true,
          }],
        }],
        volumes: [{
          name: "console-cookie",
          emptyDir: {},
        }, {
          name: "oidc-secret",
          secret: {
            secretName: "openshift-console-secret",
          },
        }],
      },
    },
  },
}
