kubernetes/apps/openshift-console/openshift-console/manifests/plugin-deployment.yaml
---
{
  apiVersion: "apps/v1",
  kind: "Deployment",
  metadata: {
    name: "kubevirt-plugin",
    labels: {
      app: "kubevirt-plugin",
    },
  },
  spec: {
    replicas: 1,
    selector: {
      matchLabels: {
        app: "kubevirt-plugin",
      },
    },
    template: {
      metadata: {
        labels: {
          app: "kubevirt-plugin",
        },
      },
      spec: {
        containers: [{
          name: "plugin",
          image: "ghcr.io/d4rkfella/kubevirt-plugin:dev@sha256:dc7816974eb9ed85c4e0a6d6b3322e7d8e058f29edb899c2eaf57fa56b2261ae",
          ports: [{
            name: "https",
            containerPort: 9443,
            protocol: "TCP",
          }],
          resources: {
            requests: {
              cpu: "50m",
              memory: "128Mi",
            },
            limits: {
              cpu: "200m",
              memory: "256Mi",
            },
          },
          securityContext: {
            allowPrivilegeEscalation: false,
            readOnlyRootFilesystem: true,
            runAsNonRoot: true,
            runAsUser: 1000,
            capabilities: {
              drop: [
                "ALL",
              ],
            },
          },
          volumeMounts: [{
            name: "nginx-logs",
            mountPath: "/var/log/nginx",
          }, {
            name: "nginx-cache",
            mountPath: "/var/cache/nginx",
          }, {
            name: "nginx-run",
            mountPath: "/var/run",
          }, {
            name: "serving-cert",
            mountPath: "/var/serving-cert",
          }],
        }],
        volumes: [{
          name: "nginx-logs",
          emptyDir: {},
        }, {
          name: "nginx-cache",
          emptyDir: {},
        }, {
          name: "nginx-run",
          emptyDir: {},
        }, {
          name: "src",
          emptyDir: {},
        }, {
          name: "serving-cert",
          secret: {
            secretName: "kubevirt-plugin-serving-cert",
          },
        }],
      },
    },
  },
}
