kubernetes/apps/openshift-console/openshift-console/manifests/plugin-service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "kubevirt-plugin",
    labels: {
      app: "kubevirt-plugin",
    },
  },
  spec: {
    type: "ClusterIP",
    ports: [{
      name: "http",
      port: 9443,
      targetPort: 9443,
      protocol: "TCP",
    }],
    selector: {
      app: "kubevirt-plugin",
    },
  },
}
