kubernetes/apps/openshift-console/openshift-console/manifests/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "openshift-console",
    labels: {
      app: "openshift-console",
    },
  },
  spec: {
    type: "ClusterIP",
    ports: [{
      name: "http",
      port: 9000,
      targetPort: 9000,
      protocol: "TCP",
    }],
    selector: {
      app: "openshift-console",
    },
  },
}
