kubernetes/apps/openshift-console/openshift-console/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://51f35e2d.kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "openshift-console",
  },
  spec: {
    hostnames: [
      "console.darkfellanetwork.com",
    ],
    parentRefs: [{
      name: "internal",
      namespace: "envoy-gateway-system",
      sectionName: "https",
    }],
    rules: [{
      matches: [{
        path: {
          type: "PathPrefix",
          value: "/",
        },
      }],
      backendRefs: [{
        name: "openshift-console",
        port: 9000,
      }],
    }],
  },
}
