kubernetes/apps/openshift-console/openshift-console/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://51f35e2d.kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
{
  apiVersion: "gateway.envoyproxy.io/v1alpha1",
  kind: "SecurityPolicy",
  metadata: {
    name: "openshift-console",
  },
  spec: {
    targetRefs: [{
      group: "gateway.networking.k8s.io",
      kind: "HTTPRoute",
      name: "openshift-console",
    }],
    oidc: {
      provider: {
        issuer: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET",
      },
      clientID: "openshift-console",
      clientSecret: {
        name: "openshift-console-secret",
      },
      redirectURL: "https://console.darkfellanetwork.com/oauth2/callback",
      logoutPath: "/logout",
    },
    jwt: {
      providers: [{
        name: "keycloak",
        issuer: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET",
        remoteJWKS: {
          uri: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs",
        },
        extractFrom: {
          cookies: [
            "AccessToken-e825b4",
          ],
        },
      }],
    },
    authorization: {
      defaultAction: "Deny",
      rules: [{
        action: "Allow",
        name: "allow-by-group",
        principal: {
          jwt: {
            provider: "keycloak",
            claims: [{
              name: "groups",
              values: [
                "cluster-admin",
              ],
            }],
          },
        },
      }, {
        action: "Allow",
        name: "allow-by-email",
        principal: {
          jwt: {
            provider: "keycloak",
            claims: [{
              name: "email",
              values: [
                "georgi.panov@darkfellanetwork.com",
              ],
            }],
          },
        },
      }],
    },
  },
}
